# openapi2jsonschema

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  pytest.ini  setup.py
fixtures/: petstore_spaces.json  petstore_tab.json
openapi2jsonschema/: command.py  errors.py  log.py  test_command.py  util.py
